# finkita-scraper-rs

./: Cargo.toml  README.md  compose.yaml
src/: config.rs  lib.rs  main.rs  repo.rs
