[package]
name = "scrapper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = "1.17.0"
thirtyfour = "0.28.1"
serde = {version = "1.0", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
reqwest = "0.11"
envy = "0.4.2"
dotenv = "0.15.0"
